Fixed overlap issues on the project page

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
   margin: -1.25em; 
 }
 
-.header ul {
+header ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -110,7 +110,7 @@ li a:hover {
 
 /*start */
 .image {
-  width: 650px;
+  width: 630px;
   height: 500px;
 }
 .slider {
@@ -237,11 +237,11 @@ li a:hover {
     font-size: 0.6em;
     width: 50%;
     position: absolute;
-    margin-top: 880px;
+    margin-top: 920px;
     font-family: "Open Sans"
   }
   .align2 {
-    margin-top: 150px;
+    margin-top: 190px;
   }
 
   .slider {
@@ -250,7 +250,7 @@ li a:hover {
     display: flex;
     overflow-x: auto;
     position: absolute;
-    top: 810px;
+    top: 830px;
     right: 30px ;
     z-index: -1;
     scroll-snap-type: x mandatory;
@@ -270,14 +270,15 @@ li a:hover {
     scroll-snap-align: start;
   }
   .align {
-    top: 1560px !important; 
+    top: 1600px !important; 
     float: left !important;
     margin-right: -65px !important;
   }
   .pdf {
-  width: 100%;
-  height: 138em;
-}
+    width: 100% !important;
+    height: 138em;
+  }
+
 }
 
 
